--- a/app/src/main/res/layout/content_common.xml
+++ b/app/src/main/res/layout/content_common.xml
@@ -13,7 +13,15 @@
                 android:id="@+id/tlbCC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-        />
+            >
+            <TextView
+                android:textColor="@color/light"
+                android:id="@+id/LBLCC"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_marginEnd="44dp"
+                android:layout_height="wrap_content"/>
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
             android:layout_below="@id/appCC"
