--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -22,7 +22,7 @@
         app:hintTextColor="@color/dark">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/firstNameEdt"
+            android:id="@+id/txtNameUserInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
@@ -45,7 +45,7 @@
         app:hintTextColor="@color/dark">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/lastNameEdt"
+            android:id="@+id/txtFamilyUserInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
@@ -66,7 +66,7 @@
         app:hintTextColor="@color/dark">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/emailEdt"
+            android:id="@+id/txtEmailUserInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -74,28 +74,8 @@
             android:textSize="@dimen/txt" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="آدرس"
-        app:boxStrokeColor="@color/dark"
-        app:counterTextColor="@color/dark"
-        app:hintEnabled="true"
-        app:hintTextColor="@color/dark">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/addressEdt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:textColor="@color/dark"
-            android:textSize="@dimen/txt" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/updateBtn"
+        android:id="@+id/btnUpdateUserInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
