main page(view,presenter,model)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,11 @@
 <resources>
     <dimen name="txt">@dimen/_14ssp</dimen>
     <dimen name="txtS">@dimen/_12ssp</dimen>
+    <dimen name="txtVS">@dimen/_9ssp</dimen>
     <dimen name="txtB">@dimen/_16ssp</dimen>
     <dimen name="imgS">@dimen/_60sdp</dimen>
     <dimen name="img">@dimen/_90sdp</dimen>
+    <dimen name="imgB">@dimen/_120sdp</dimen>
     <dimen name="radius">16dp</dimen>
     <dimen name="radiusVS">4dp</dimen>
 </resources>
