--- a/app/src/main/res/layout/dialog_address.xml
+++ b/app/src/main/res/layout/dialog_address.xml
@@ -13,67 +13,85 @@
         app:cardBackgroundColor="@color/light"
         app:cardCornerRadius="@dimen/radius">
 
-
-        <RelativeLayout
-            android:layout_margin="8dp"
-            android:layout_width="wrap_content"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/LBLDialogAddress"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="افزودن آدرس"
-                android:textColor="@color/primaryColor" />
+                android:layout_margin="8dp">
 
-            <EditText
-                android:id="@+id/txtDialogAddress"
-                android:textColor="@color/dark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/LBLDialogAddress"
-                android:layout_margin="8dp"
-                android:background="@drawable/edt_border_primary"
-                android:gravity="top"
-                android:hint="آدرس"
-                android:minHeight="150dp"
-                android:padding="8dp"
-                android:textColorHint="@color/secondaryLightColor" />
+                <TextView
+                    android:id="@+id/LBLDialogAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:text="افزودن آدرس"
+                    android:textColor="@color/primaryColor" />
 
-            <EditText
-                android:id="@+id/txtVahedDialogAddress"
-                android:textColor="@color/dark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtDialogAddress"
-                android:layout_margin="8dp"
-                android:background="@drawable/edt_border_primary"
-                android:gravity="top"
-                android:hint="واحد"
-                android:padding="8dp"
-                android:textColorHint="@color/secondaryLightColor" />
+                <EditText
+                    android:id="@+id/txtSubDialogAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/LBLDialogAddress"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/edt_border_primary"
+                    android:gravity="top"
+                    android:hint="عنوان"
+                    android:padding="8dp"
+                    android:textColor="@color/dark"
+                    android:textColorHint="@color/secondaryLightColor" />
 
-            <EditText
-                android:id="@+id/txtPelakDialogAddress"
-                android:textColor="@color/dark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtVahedDialogAddress"
-                android:layout_margin="8dp"
-                android:background="@drawable/edt_border_primary"
-                android:gravity="top"
-                android:hint="پلاک"
-                android:padding="8dp"
-                android:textColorHint="@color/secondaryLightColor" />
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/txtPelakDialogAddress"
-                android:padding="8dp"
-                android:layout_margin="8dp"
-                android:text="ثبت"
-                />
-        </RelativeLayout>
+                <EditText
+                    android:id="@+id/txtDialogAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtSubDialogAddress"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/edt_border_primary"
+                    android:gravity="top"
+                    android:hint="آدرس"
+                    android:minHeight="150dp"
+                    android:padding="8dp"
+                    android:textColor="@color/dark"
+                    android:textColorHint="@color/secondaryLightColor" />
+
+                <EditText
+                    android:id="@+id/txtVahedDialogAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtDialogAddress"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/edt_border_primary"
+                    android:gravity="top"
+                    android:hint="واحد"
+                    android:padding="8dp"
+                    android:textColor="@color/dark"
+                    android:textColorHint="@color/secondaryLightColor" />
+
+                <EditText
+                    android:id="@+id/txtPelakDialogAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtVahedDialogAddress"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/edt_border_primary"
+                    android:gravity="top"
+                    android:hint="پلاک"
+                    android:padding="8dp"
+                    android:textColor="@color/dark"
+                    android:textColorHint="@color/secondaryLightColor" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/txtPelakDialogAddress"
+                    android:layout_margin="8dp"
+                    android:padding="8dp"
+                    app:cornerRadius="@dimen/radius"
+                    android:text="ثبت" />
+            </RelativeLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
